# sockets_test

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: main.c
server/: CMakeLists.txt
server/src/: main.c
